deployment/nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-spring-boot-app-nodeport-service
  namespace: default
spec:
  type: NodePort
  selector:
    app: spring-boot-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30005
