deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-app-service
  namespace: default
spec:
  type: LoadBalancer
  selector:
    app: spring-boot-app
  ports:
    - protocol: TCP
      port: 81
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: my-spring-boot-app-cluster-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: spring-boot-app
  ports:
    - protocol: TCP
      port: 81
      targetPort: 8080
